# xDeprecated_kinesis-api

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build-wasm.sh  sample-output.txt  sample-test-output.txt
api/: index.js  index.ts  package-lock.json  package.json
api/data/: mappings.txt
data/: collection_err_test.txt  collection_ok_test.txt  collections.txt  configs.txt  configs_test.txt  encryption_key.txt  encryption_key_test.txt  mappings.txt  mappings_test.txt  projects.txt  projects_test.txt  users.txt  users_test.txt
src/: bcrypt.rs  collection.rs  config.rs  custom_structures.rs  encryption.rs  io.rs  lib.rs  main.rs  mappings.rs  project.rs  structures.rs  tests.rs  user.rs
src/bindings/: bindings_collection.rs  bindings_config.rs  bindings_custom_structures.rs  bindings_mappings.rs  bindings_project.rs  bindings_structures.rs  bindings_user.rs
