[package]
name = "kinesis-db"
description = "A secure, portable and fast database written in Rust for Kinesis API"
repository = "https://github.com/EdgeKing810/kinesis-db"
license = "MIT"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
magic-crypt = "3.1.9"
wasm-bindgen = "=0.2.61"
fastrand = "1.5.0"
blowfish = { version = "0.8", features = ["bcrypt"] }
base64 = { version = "0.13", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release] 
opt-level = "s"
