[package]
name = "kinesis-db"
description = "A secure, portable and fast database written in Rust for Kinesis API"
repository = "https://github.com/EdgeKing810/kinesis-db"
license = "MIT"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1"
magic-crypt = "3.1.9"
wasm-bindgen = "0.2.74"
fastrand = "1.5.0"

[profile.release]
lto = true
opt-level = "z"
