[package]
name = "kinesis-db"
description = "A secure, portable and fast database written in Rust for Kinesis API"
repository = "https://github.com/EdgeKing810/kinesis-db"
license = "MIT"
version = "0.1.0"
edition = "2018"

[dependencies]
regex = "1"
magic-crypt = "3.1.9"
fastrand = "1.5.0"
rust-argon2 = "0.8"

[profile.release]
lto = true
opt-level = "z"
